put newsletter related css into own file, and fix the newsletter image size growing too big in certain layout breakpoints

--- a/_sass/_responsive/_home.scss
+++ b/_sass/_responsive/_home.scss
@@ -163,22 +163,7 @@
         }
     }
    
-    // newsletter section responsive css--------
-    .newsletter{
-        position: relative;
-        padding: 65px 0;
-        .r2a_container{
-            .newsletter_content{
-                width: 100%;
-            }
-            .newsletter_image {
-                width: 70%;
-                position: absolute;
-                right: 0;
-                top: -20px;
-            }
-        }
-    }  
+
     // follow section responsive css--------
     .follow_section {
         padding: 50px 0;
